--- a/client/src/page/mainnet/Mainnet.css
+++ b/client/src/page/mainnet/Mainnet.css
@@ -1,3 +1,10 @@
+.jsonLink {
+  color: #084311;
+  background-color: #d5f3c9;
+  border-radius: 0.1875rem;
+  padding: 0.125rem 0.375rem 0.1875rem 0.375rem;
+}
+
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
