--- a/client/src/page/mainnet/Mainnet.css
+++ b/client/src/page/mainnet/Mainnet.css
@@ -1,8 +1,17 @@
+h2 {
+  margin-top: 15px;
+  padding-top: 15px;
+}
 .jsonLink {
   color: #084311;
   background-color: #d5f3c9;
   border-radius: 0.1875rem;
   padding: 0.125rem 0.375rem 0.1875rem 0.375rem;
+}
+.checkSum{
+  color: #3c4654;
+  font-size: 9px;
+  padding-top: 10px;
 }
 
 table {
